--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   margin: 0;
-  padding: 70px 70px 20px;
+  padding: 67px 70px 20px;
 }
 
 .footer__text {
@@ -65,4 +65,45 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+@media (max-width: 845px) {
+  .footer {
+    padding: 70px 30px 20px;
+  }
+}
+
+@media (max-width: 615px) {
+  .footer {
+    padding: 78px 10px 20px;
+  }
+
+  .footer__text {
+    font-size: 12px;
+    margin: 0 0 49px;
+  }
+
+  .footer__info {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .footer__list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer__list-el {
+    margin: 0 0 8px 0;
+  }
+
+  .footer__copyright {
+    margin: 21px 0 0 0;
+    font-size: 12px;
+    color: #a0a0a0;
+  }
+
+  .footer__link {
+    font-size: 12px;
+  }
 }
