--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -13,8 +13,35 @@
   padding: 0;
   margin: 0 auto;
   text-align: center;
+  font-style: normal;
   font-size: 50px;
   font-weight: 400;
   line-height: 58px;
   letter-spacing: -2px;
+}
+
+@media (max-width: 845px) {
+  .promo {
+    padding: 326px 0px 342px;
+    background-position-y: 224px;
+  }
+}
+
+@media (max-width: 740px) {
+  .promo__title {
+    width: 95%;
+  }
+}
+
+@media (max-width: 615px) {
+  .promo {
+    padding: 207px 0px 246px;
+    background-size: 248px;
+    background-position-y: 143px;
+  }
+  .promo__title {
+    font-size: 31px;
+    line-height: 39px;
+    letter-spacing: -1.24px;
+  }
 }
