--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -71,3 +71,37 @@
   background-image: url(../../images/buttonDelete.svg);
   margin-top: 3px;
 }
+
+@media (max-width: 845px) {
+  .card {
+    width: 339px;
+    height: 257px;
+  }
+
+  .card__img {
+    width: 339px;
+    height: 190px;
+  }
+}
+
+@media (max-width: 615px) {
+  .card {
+    width: 300px;
+    height: 235px;
+  }
+  .card__img {
+    width: 300px;
+    height: 168px;
+  }
+
+  .card__info {
+    margin: 12px 12px 14px;
+    max-width: 250px;
+  }
+
+  .card__button {
+    margin: 5px;
+    width: 32px;
+    height: 32px;
+  }
+}
