--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,14 +1,14 @@
 .cardList {
   padding: 70px 70px 84px;
   margin: 0;
-  min-height: calc(100vh - 220px - 74px - 172px - 147px);
+  min-height: calc(100vh - 613px);
   display: flex;
   flex-direction: column;
 }
 
-.cardList_saved {
+/* .cardList_saved {
   padding-bottom: 55px;
-}
+} */
 
 .cardList__items {
   display: grid;
@@ -54,4 +54,40 @@
 .cardList__buttonMore-none {
   opacity: 0;
   visibility: hidden;
+}
+
+@media (max-width: 845px) {
+  .cardList {
+    padding: 70px 30px 79px;
+    min-height: calc(100vh - 661px);
+  }
+
+  /* .cardList_saved {
+    padding-bottom: 52px;
+  } */
+
+  .cardList__items {
+    grid-template-columns: repeat(auto-fit, 339px);
+    grid-column-gap: 30px;
+    grid-row-gap: 36px;
+  }
+}
+
+@media (max-width: 615px) {
+  .cardList {
+    padding: 18px 10px 72px;
+    min-height: calc(100vh - 695px);
+  }
+  .cardList__items {
+    grid-template-columns: repeat(auto-fit, 300px);
+    grid-column-gap: 17px;
+    grid-row-gap: 20px;
+  }
+  .cardList__buttonMore {
+    width: 240px;
+    height: 36px;
+  }
+  /* .cardList_saved {
+    padding-bottom: 45px;
+  } */
 }
