--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -72,3 +72,58 @@
   font-weight: 400;
   line-height: 18px;
 }
+
+@media (max-width: 845px) {
+  .searchForm {
+    padding: 80px 30px 120px;
+  }
+
+  .searchForm__form::after {
+    top: 181px;
+  }
+
+  .searchForm__filter {
+    padding: 0 0px 0 21px;
+  }
+}
+
+@media (max-width: 615px) {
+  .searchForm {
+    padding: 80px 10px 79px;
+  }
+
+  .searchForm__form {
+    flex-direction: column;
+    border-radius: 0;
+    padding: 0;
+    box-shadow: none;
+  }
+
+  .searchForm__box {
+    border: 0;
+    margin-bottom: 45px;
+    border-radius: 9px;
+    padding: 18px;
+    position: relative;
+    box-shadow: 0px 3px 14px 0px #00000014;
+    box-sizing: border-box;
+  }
+
+  .searchForm__input::placeholder {
+    background: url(../../images/placeholdersmall.svg);
+    background-repeat: no-repeat;
+    background-position: left;
+  }
+
+  .searchForm__button {
+    padding: 0 15px;
+  }
+
+  .searchForm__filter-text {
+    font-size: 11px;
+  }
+
+  .searchForm__filter {
+    padding: 0;
+  }
+}
