--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -46,9 +46,9 @@
   line-height: 18px;
 }
 
-/* .header__link:active {
+.header__link-active {
   font-weight: 500;
-} */
+}
 
 .header__button-profile {
   color: #000;
