--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -3,9 +3,8 @@
   align-items: center;
   flex-direction: column;
   box-sizing: border-box;
-  min-height: 100vh;
+  flex-grow: 1;
   padding: 60px;
-  text-align: center;
 }
 
 .notFound__title {
