--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,3 +1,9 @@
+.main {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+}
+
 .main__subtitle {
   font-size: 22px;
   font-style: normal;
