fix inputs colors

--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -36,6 +36,7 @@
   width: 100%;
   border: none;
   outline-color: #3456f3;
+  background-color: transparent;
 }
 
 .searchForm__input::placeholder {
