--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -4,6 +4,10 @@
   box-shadow: 0px 16px 24px 0px #0000000d;
   border-radius: 4%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 
 .card__img {
@@ -15,6 +19,13 @@
 .card__box {
   display: flex;
   justify-content: space-between;
+}
+
+.card__link {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  display: contents;
 }
 
 .card__info {
@@ -31,7 +42,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin: 0 0 10px 0;
+  margin: 2px 0 10px 0;
   padding: 0;
   overflow: hidden;
   text-overflow: ellipsis;
