--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -54,6 +54,10 @@
   text-decoration: none;
 }
 
+.register__link-logo {
+  width: fit-content;
+}
+
 @media (max-width: 845px) {
   .register {
     padding: 232px 0 288px;
