--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -21,6 +21,10 @@
   line-height: normal;
 }
 
+.authForm__btn-disabled {
+  background: #e8e8e8;
+}
+
 @media (max-width: 615px) {
   .authForm{
     width: 100%;
