--- a/src/components/AuthInput/AuthInput.css
+++ b/src/components/AuthInput/AuthInput.css
@@ -13,27 +13,32 @@
 
 .authInput__input {
   width: 100%;
-  margin: 4px 0 30px;
-  padding: 0;
+  padding: 4px 0 10px;
+  margin: 0 0 18px;
   color: #000;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
   border: none;
-  outline-color: #3456f3;
-  outline-width: 1px;
+  border-bottom: 1px solid #e8e8e8;
+  outline: none;
   background-color: transparent;
 }
 
-.authInput::after {
-  content: ' ';
-  background: #e8e8e8;
-  width: 100%;
-  height: 1px;
-  top: 49px;
+.authInput__input:focus {
+  border-bottom: 1px solid #3456f3;
+}
+
+.authInput__error {
+  top: 50px;
   left: 0px;
   position: absolute;
   margin: 0;
   padding: 0;
+  color: #ee3465;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
