--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -6,12 +6,39 @@
   flex-grow: 1;
 }
 
+.authForm__box {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  margin: auto 0 0 0;
+  padding: 0;
+}
+
+.authForm__apiInfo {
+  margin: 0 auto 10px;
+  padding: 0;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.authForm__apiInfo-red {
+  color: #ee3465;
+}
+
+.authForm__apiInfo-green {
+  color: #2be080;
+}
+
 .authForm__btn {
   width: 100%;
   height: 45px;
   border-radius: 3px;
   background: #3456f3;
-  margin: auto 0 0 0;
+  margin: 0 0 0 0;
   padding: 0;
   border: none;
   color: white;
@@ -26,7 +53,7 @@
 }
 
 @media (max-width: 615px) {
-  .authForm{
+  .authForm {
     width: 100%;
   }
 
