--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -16,21 +16,14 @@
   padding: 0;
 }
 
-.authForm__apiInfo {
+.authForm__apiMessage {
   margin: 0 auto 10px;
   padding: 0;
   font-size: 11px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-}
-
-.authForm__apiInfo-red {
   color: #ee3465;
-}
-
-.authForm__apiInfo-green {
-  color: #2be080;
 }
 
 .authForm__btn {
