--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -147,6 +147,10 @@
   background: #e8e8e8;
 }
 
+.profile__apiMessage_green {
+  color: green;
+}
+
 @media (max-width: 845px) {
   .profile {
     padding: 236px 0 92px;
