--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   border-radius: 9px;
-  padding: 19px;
+  padding: 19px 19px 19px 0;
   box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
   position: relative;
 }
@@ -30,6 +30,9 @@
   justify-content: space-between;
   padding-right: 14px;
   border-right: 1px solid #cbcbcb;
+  background-image: url('../../images/searchicon.svg');
+  background-repeat: no-repeat;
+  background-position: left;
 }
 
 .searchForm__input {
@@ -37,12 +40,7 @@
   border: none;
   outline-color: #3456f3;
   background-color: transparent;
-}
-
-.searchForm__input::placeholder {
-  background: url(../../images/searchIcon.svg);
-  background-repeat: no-repeat;
-  background-position: left;
+  margin-left: 30px;
 }
 
 .searchForm__button {
@@ -110,10 +108,8 @@
     box-sizing: border-box;
   }
 
-  .searchForm__input::placeholder {
-    background: url(../../images/placeholdersmall.svg);
-    background-repeat: no-repeat;
-    background-position: left;
+  .searchForm__input {
+    margin-left: 10px;
   }
 
   .searchForm__button {
